<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_refresh" android:title="@string/refresh"
        android:icon="@drawable/ic_action_refresh"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_connect" android:title="@string/connect"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_clear_log" android:title="@string/clear_log"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_reset_device" android:title="@string/reset_device"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
