<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff000000"
    tools:context=".MainActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:id="@+id/top_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"

            android:background="#ff000000"
            android:focusableInTouchMode="false"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/running_icon"
                android:layout_width="64dp"
                android:layout_height="80dp"
                android:layout_alignParentLeft="true"
                android:focusableInTouchMode="false"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:src="@drawable/running_icon" />


            <TextView
                android:id="@+id/meta_wear_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_alignParentStart="false"
                android:layout_alignParentTop="false"
                android:layout_toEndOf="@id/running_icon"
                android:paddingLeft="9dp"
                android:paddingTop="14dp"
                android:text="@string/metawear"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffffff"
                android:textIsSelectable="true" />

            <TextView
                android:id="@+id/connection_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/meta_wear_title"
                android:layout_toEndOf="@+id/running_icon"
                android:fontFamily="sans-serif-thin"
                android:paddingLeft="9dp"
                android:paddingTop="2dp"
                android:text="@string/no_metawear_connected"
                android:textColor="#ffffffff" />

            <Switch
                android:id="@+id/demo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:checked="false"
                android:fontFamily="sans-serif-thin"
                android:paddingRight="0dp"
                android:paddingTop="16dp"
                android:text="@string/demo"
                android:textColor="#ffffffff"
                android:textStyle="italic" />
            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/download_progress"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:paddingTop="10dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/steps_in_last_hour"
                android:id="@+id/steps_in_last_hour"
                android:layout_below="@+id/running_icon"
                android:textColor="#ffffffff"
                android:fontFamily="sans-serif-bold"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:password="false"
                android:gravity="center_horizontal" />
            <View
                android:layout_below="@+id/steps_in_last_hour"
                android:layout_width="300dp"
                android:layout_height="0.5dp"
                android:background="#686868"
                android:id="@+id/line"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/active_calories_burned"
                android:id="@+id/active_calories_burned"
                android:layout_below="@+id/line"
                android:textColor="#ffffffff"
                android:fontFamily="sans-serif-light"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textStyle="normal"
                android:textAlignment="center"
                android:password="false"
                android:gravity="center_horizontal" />

        </RelativeLayout>

        <fragment
            android:id="@+id/graph"
            android:name="com.mbientlab.activitytracker.GraphFragment"
            android:layout_width="match_parent"
            android:layout_height="265dp"
            android:layout_gravity="start"
            tools:layout="@layout/fragment_graph" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/reading_time"
            android:layout_below="@+id/line"
            android:textColor="#ffffffff"
            android:fontFamily="sans-serif-light"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textStyle="normal"
            android:password="false" />
        <View
            android:layout_below="@+id/steps_in_last_hour"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ffffffff"
            android:id="@+id/bottom_line"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal|bottom" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/steps"
            android:textColor="#ffffffff"
            android:fontFamily="sans-serif-bold"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:password="false"
            android:gravity="center_horizontal"
            android:textSize="24pt" />

    </LinearLayout>


</RelativeLayout>
